# cc-search

./: IMPLEMENTATION_PROMPT.md  README.md  SPEC.md  pyproject.toml
src/cc_search/: __init__.py  chunker.py  cli.py  embeddings.py  indexer.py  models.py  searcher.py  storage.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_chunker.py  test_storage.py
