[project]
name = "cc-search"
version = "0.1.0"
description = "Search Claude Code session history with semantic + keyword search"
readme = "README.md"
authors = [
    { name = "Patrik Persson", email = "patrikcpersson@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer",
    "sentence-transformers",
    "sqlite-vec",
    "rich",
]

[project.scripts]
cc-search = "cc_search.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "hypothesis",
    "ruff",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "warn"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
